# vectorim

./: .gitignore  LICENSE  Readme.md  pyproject.toml
src/vectorim/: __init__.py  vectorim.py
tests/: test_search.py
